<resources>


    <!-- Stringhe Activity Login e registrazione  -->
    <string name="login_text">Login to Artify</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="login_button">Login</string>
    <string name="reg_text">Sign up to Artify</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email" translatable="false">Email</string>
    <string name="signup_button">Sign up</string>
    <string name="not_accounted">Don\'t have an account?</string>
    <string name="accounted">Already have an account? Login!</string>
    <string name="accessDone">Logged in!</string>

    <!-- Stringhe Activity listamuseiadapter -->
    <string name="MuseoDefalut">Default Museum</string>

    <!-- Stringhe Activity HomePage -->
    <string name="HomePageHeader" translatable="false">HOME PAGE</string>
    <string name="disconnected">Disconnected</string>

    <!-- Stringhe Activity Dashboard  -->
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="dashboard_land" translatable="false">D\na\ns\nh\nb\no\na\nr\nd</string>
    <string name="welcome">Welcome,</string>
    <string name="user" translatable="false">Guest</string>
    <string name="mailIns" translatable="false"><b></b></string>
    <string name="mail" translatable="false">E-mail:</string>
    <string name="dashboardName">Name:</string>
    <string name="nameIns" translatable="false"><b></b></string>
    <string name="points">"Your score: "</string>
    <string name="pointsReached" translatable="false"></string>
    <string name="badges" translatable="false">Badges:</string>
    <string name="path">Museums</string>
    <string name="settings">Settings</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="login" translatable="false">Login</string>

    <!-- Stringhe Activity MenuPreScelta -->
    <string name="MenuPreSceltaHeader" translatable="false"></string>
    <string name="CercaOpera">Find Artwork</string>
    <string name="InizaPercorso">Start Itinerary</string>

    <!-- Stringhe Activity lista_zone/listadapter  -->
    <string name="app_name" translatable="false">Artify</string>
    <string name="ZoneMuseoHeader">ZONE MUSEO</string>
    <string name="TestoListAdapterDefault">Zona Base</string>

    <!-- Stringhe Activity lista_opere/listaOpereAdapter  -->
    <string name="OpereMuseoHeader">OPERE</string>
    <string name="TestoListaOpereAdapterDefault">Default Artwork</string>
    <string name="Cerca">Search</string>

    <!-- Stringhe Activity tipo percorso  -->
    <string name="TipoPercorsiHeader">ITINERARY TYPE</string>
    <string name="PercorsoBreve">Short</string>
    <string name="PercorsoMedio">Medium</string>
    <string name="PercorsoLungo">Long</string>

    <!-- Errori -->
    <string name="ReadDbError" translatable="false">Errore! Impossibile leggere dal Database</string>
    <string name="error_name">Incorrect name</string>
    <string name="error_surname">Incorrect surname</string>
    <string name="error_email">Incorrect email</string>
    <string name="error_username">Incorrect username</string>
    <string name="error_password">Incorrect password</string>
    <string name="error_signUp">Signup failed!</string>
    <string name="BTnotSupported">Bluetooth not supported</string>
    <string name="BToff">Enable Bluetooth</string>
    <string name="accessFailure">Oops! Something went wrong!</string>
    <string name="NotifyError" translatable="false">Ops!Una notifica sembra non partire,sistemo subito!</string>

    <!-- Descrizioni -->
    <string name="DescrizioneLogoZone" translatable="false">Immagine identificativa delle zone</string>
    <string name="DescrizioneLogoOpera" translatable="false">Immagine identificativa delle opere</string>
    <string name="DescrizioneDrawer_top_iw" translatable="false">Immagine Utene Loggato</string>
    <string name="DescrizioneImageView_user" translatable="false">Immagine Utene Loggato</string>
    <string name="DescrizioneImageButton" translatable="false">Bottone per la modifica dell immagine</string>
    <string name="DescrizioneDash_badge" translatable="false">Immagine badge</string>
    <string name="DescrizioneHomePageBtn" translatable="false">Bottone per tornare alla homepage</string>
    <string name="DescrizioneImageButtonHome" translatable="false">Bottone per tornare alla home</string>
    <string name="DescrizioneImageButton_opera" translatable="false">Bottone per tornare indietro a elenco opere</string>
    <string name="DescrizioneImageButton_game" translatable="false">Bottone per accedre al qr code</string>

    <!-- Stringhe Activity Opera  -->
    <string name="opera">Artwork Information</string>
    <string name="nome_opera">Artwork title</string>
    <string name="stile_opera">Artwork Style</string>
    <string name="dimensioniOpera">Artwork size</string>
    <string name="descrizioneOpera">Artwork Description</string>
    <string name="paragrafoDescrizioneOpera">Description</string>
    <string name="autoreOpera">Artist</string>
    <string name="data">Creation date:</string>
    <string name="dataOpera">Artwork Date</string>

    <!-- Stringhe Activity Puzzle -->
    <string name="chronometerLabel"><b>Elapsed time:</b></string>
    <string name="movesPuzzle"><b>Moves:</b></string>
    <string name="back_to_opera_button">Back to artwork</string>
    <string name="congratulations">Congratulations!</string>
    <string name="puzzle_completed_time">You completed the puzzle in</string>
    <string name="secondsPuzzle">seconds!</string>
    <string name="earned_points_label">"You earned "</string>
    <string name="pointsPuzzle">points!</string>
    <string name="ok_button" translatable="false">OK</string>
    <string name="imagehelp_content_description">Reference image</string>
    <string name="invalid_move">Invalid move</string>

    <string name="logAsGuest">Log as Guest(limited funcionality)</string>
    <string name="LimitedFunctionality">you must be logged,limited functionality!</string>
    <!-- Notifiche -->
    <string name="notfyTitle" translatable="false">Hey hai visto,c\'è un\'Opera!</string>




</resources>
