<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_weight="1"
        android:background="#3F52E6"
        android:elevation="1dp">

        <TextView
            android:id="@+id/NomeOpera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="25dp"
            android:text="@string/opera"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/voto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/NomeOpera"
            android:background="@null"
            android:contentDescription="@string/DescrizioneImageButton_opera"
            android:elevation="1dp"
            android:onClick="createNewVoteDialog"
            app:srcCompat="@drawable/img_voto"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgOpera"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:contentDescription="@string/DescrizioneImageView_user"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F52E6">

        <TextView
            android:id="@+id/nomeOpera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/nome_opera"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/autoreOpera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomeOpera"
            android:layout_marginStart="15dp"
            android:text="@string/autoreOpera"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/game"
            android:background="@null"
            android:contentDescription="@string/DescrizioneImageButton_opera"
            android:elevation="1dp"
            app:srcCompat="@drawable/img_share"
            app:tint="@color/white"
            android:onClick="share"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/game"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/DescrizioneImageButton_opera"
            android:elevation="1dp"
            android:onClick="game"
            app:srcCompat="@drawable/img_game"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/stileOpera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/stile_opera"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <View
            android:id="@+id/space"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/stileOpera"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/dimensioniOpera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/space"
            android:text="@string/dimensioniOpera"
            android:textColor="@color/black"
            android:textSize="19sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:text="@string/data"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dataOpera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/data"
            android:text="@string/dataOpera"
            android:textColor="@color/black"
            android:textSize="19sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/descrizione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="13dp"
        android:text="@string/paragrafoDescrizioneOpera"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/descrizioneOpera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/descrizioneOpera"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:isScrollContainer="true"/>

</LinearLayout>